2023-05-18  Karl Berry  <karl@new.tug.org>

	* tb135capsule.txt: 43:3 (tb135) public.

2023-05-17  Karl Berry  <karl@freefriends.org>

	Crossref upload for 44:1 (tb136).
	* README-process.txt: mention lack of fonts in bibliography again.
	* cr-landing-bbl-abs (update_landing_bbl): don't consider foo.tex
	to be a url (tb136wermuth); insert newline before bullet
	&#x2022; (tb136andre).
	* ltx2crossrefxml-tugboat.cfg: updates for ConTeXt,
	tb136andre, tb136mitt, especially.
	(\CandT): does not need to be special case.
	* lists-authinfo.txt (Bos, McCurley, Stenbord): orcid.
	* tb136capsule.txt: Romano youtube links.

2023-05-16  Karl Berry  <karl@tug.org>

	* Makefile: 44:1 aka tb136.
	* tb136capsule.txt: new file.
	* lists-regexps.txt: handle \booktitle.
	* capin.pl (read_issue): reword duplicate pageno error.

2023-02-27  Karl Berry  <karl@freefriends.org>

	* lists-authinfo.txt (Wilde): add orcid.

	* tb133capsule.txt: only one book review, not plural.

2022-12-10  Karl Berry  <karl@tug.org>

	* tb99capsule.txt,
	* tb125capsule.txt,
	* tb129capsule.txt,
	* tb131capsule.txt,
	* tb135capsule.txt: add Accessibility category to Tagged PDF
	articles.

2022-12-09  Karl Berry  <karl@tug.org>

	* lists-authinfo.txt (Bie&#x0144;): add S.
	* tb135capsule.txt (bien): add S.
	* lists-unifications.txt (Bie&#x0144;): remove since we now use
	the "S." consistently. And this is needed because there is another
	linguistics professor named "Janusz Bie\'n".

	* tb135capsule.txt (wright-grapheme): category \LaTeX, not Software.

2022-12-09  Karl Berry  <karl@freefriends.org>

	* lists-authinfo.txt (Bie&#x0144;): add orcid.

2022-11-07  Karl Berry  <karl@freefriends.org>

	* cr-do-issue: output #unchanged line only if verbose.
	* tb135capsule.txt: annotations.
	* tb91capsule.txt: https for gust.
	* tb93capsule.txt: zeeba url, period after link.

2022-11-07  Karl Berry  <karl@tug.org>

	* tb135capsule.txt: new issue 43:3.
	* lists-regexps.txt (\textbf): add.