@@ -112,7 +112,7 @@
 \capsule{}%subsec
         {Publishing}
         {Berthold K.P.~Horn}
-        {{\tt dvi} and eps: The ideal author-to-publisher interface?}
+        {{\tt dvi} and {\tt eps}: The ideal author-to-publisher interface?}
         {}
         {377-381}
         {/TUGboat/tb12-3-4/tb33horn.pdf}
