@@ -107,7 +107,7 @@
 \capsule{}%subsec
         {Typography}
         {Peter~Flynn}
-        {{Typographers Inn}}
+        {{Typographers' Inn}}
         {}
         {242-245}
         {/TUGboat/tb18-4/tb57flyn.pdf}
