@@ -135,7 +135,7 @@
 \capsule{}
         {Typography}
         {Peter Flynn}
-        {Typographer's Inn}
+        {Typographers' Inn}
         {}
         {94-95}
         {/TUGboat/tb20-2/tb63inn.pdf}
