@@ -1,3 +1,10 @@
+2023-05-20  Karl Berry  <karl@freefriends.org>
+
+	Fixes from Nelson.
+	* tb33capsule.txt: forgot \tt for eps.
+	* tb57capsule.txt,
+	* tb63capsule.txt: Typographers' Inn.	
+
 2023-05-18  Karl Berry  <karl@new.tug.org>
 
 	* tb135capsule.txt: 43:3 (tb135) public.
